codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__mini_idle_surface.snap
---
source: tui/src/bottom_pane/mod.rs
expression: rendered
---
Ask anything... "Fix a TODO in the codebase"
                              82% context left · gpt-5.6-sol high · / commands
