codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__mini_idle_surface_narrow.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, Rect::new(0, 0, width, height))"
---
Ask anything... "Fix a T
      gpt-5.6-sol high
