codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__slash_command_popup_dismissed.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 2213
expression: "render_snapshot(&pane, area)"
---
⠋ 0s
/res
  tab to queue message
